--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,13 +7,18 @@
 </head>
 <body>
     Hello !
-    <a id="join" href="#">회원가입</a>
-    <script>
-        document.getElementById('join')
-        .addEventListener("click", e => {
-            location.href = '/forms/users/join'
-        })
-    </script>
+    <a id="join" href="#">회원가입</a><span style='width:50px'></span>
+    <a id="login" href="#">로그인</a>
+<script>
+    document.getElementById('join')
+    .addEventListener("click", e => {
+        location.href = '/forms/users/join'
+    })
+    document.getElementById('login')
+    .addEventListener('click', e => {
+        location.href = '/forms/users/login'
+    })
+</script>
 </body>
 
 </html>
