--- a/src/main/resources/templates/users/join.html
+++ b/src/main/resources/templates/users/join.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,16 +8,17 @@
     <style>
         table {border: 1px solid black}
         table tr {border: 1px solid black}
-        table tr td {border: 1px solid black}
+        table tr td{border: 1px solid black}
     </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <h1>회원가입</h1>
-    <form action="">
+    <form>
     <table>
         <tr>
             <td>ID </td>
-            <td><input id="userid" type="text"></td>
+            <td><input id="userid" type="text" value="kim"></td>
         </tr>
         <tr>
             <td>PW</td>
@@ -49,15 +51,15 @@
                 dataType: 'json',
                 contentType: 'application/json',
                 success: d => {
-                    if(d.name === 'FAILURE') {
+                    if(d.name === 'FAILURE'){
                         alert(`회원가입 실패`)
-                    }else {
+                    }else{
                         alert(`${d.name} 가입 성공`)
                     }
                 },
                 error: e => {
                     alert(`${e} 을 이유로 전송실패`)
-                }    
+                }
             })
         })
         document.getElementById('cancel-btn')
